--- a/public/style.css
+++ b/public/style.css
@@ -34,3 +34,28 @@ form div {
   height: 100%;
   width: 100%;
 }
+
+.color-picker-container {
+  text-align: center;
+  display: inline;
+}
+
+.brushsize-container {
+  display: inline;
+  margin-left: 12px;
+}
+.eraser-container{
+  display: inline;
+  margin-left: 12px;
+}
+.text-container{
+  display: inline;
+  margin-left: 12px;
+}
+.tools-section {
+  text-align: center;
+}
+
+.info {
+  position: absolute;
+}
