help the add text button stay highlighted even when user is typing in the input for the text box

--- a/public/style.css
+++ b/public/style.css
@@ -46,6 +46,9 @@ form div {
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+.selected{
+  background-color: greenyellow;
+}
 #sketch {
   height: 100%;
   width: 100%;
