resize bug fix, button css

--- a/public/style.css
+++ b/public/style.css
@@ -49,6 +49,36 @@ form div {
 .selected{
   background-color: greenyellow;
 }
+
+.button-1 {
+  background-color: #EA4C89;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-1:hover,
+.button-1:focus {
+  background-color: #F082AC;
+}
 #sketch {
   height: 100%;
   width: 100%;
@@ -80,6 +110,7 @@ form div {
 button {
   display: inline;
   margin-left: 12px;
+  margin-bottom: 12px;
 }
 .tools-section {
   text-align: center;
