--- a/public/style.css
+++ b/public/style.css
@@ -51,11 +51,11 @@ form div {
 }
 
 .button-1 {
-  background-color: #EA4C89;
+  background-color: #ea4c89;
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
   display: inline-block;
   font-size: 14px;
@@ -77,7 +77,7 @@ form div {
 
 .button-1:hover,
 .button-1:focus {
-  background-color: #F082AC;
+  background-color: #f082ac;
 }
 #sketch {
   height: 100%;
@@ -109,8 +109,8 @@ form div {
 }
 button {
   display: inline;
-  margin-left: 12px!important; 
-  margin-bottom: 12px!important;
+  margin-left: 12px !important;
+  margin-bottom: 12px !important;
 }
 .tools-section {
   text-align: center;
