--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,11 @@ nav {
   width: 100%;
   background-color: white;
 }
+hr {
+  width: 100%;
+  height: 30px;
+  background-color: white;
+}
 
 nav a {
   display: inline-block;
@@ -26,6 +31,12 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.carousel {
+  background-color: white;
+  width: 100%;
+}
+
 .button-2:focus {
   background-color: greenyellow;
 }
